@startuml uml

abstract class Block #90e0ef {
	+void updateBlock()
}

class Road #90e0ef{
	+void updateRoad()
	+void resetRoad()
	+void removeObstacleFromBloc(bloc : Block)
	+Boolean generateObstacle(bloc : Block)
	+void displayRoad(road: [Block])
}


class GameView #90e0ef {
	+ void update()
}

class Coin #90e0ef {
	+ void updateCoin()
}

class RoadBlock #90e0ef {}

class Branch #90e0ef {}

class SideRock #90e0ef {}

class SimpleRoad #90e0ef {}

class IntersectionRoad #90e0ef {}





GameView   -->  "1" Road


Road --> "*" Coin
Road  --> "*"  Block

Block <|--  RoadBlock 
Block <|--  Branch
Block <|--  SideRock
Block <|--  SimpleRoad
Block <|-- IntersectionRoad

@enduml